history page change

--- a/price.html
+++ b/price.html
@@ -138,7 +138,7 @@
                                 </span>Sold</a>  
                         </li>
                         <li>
-                            <a href="javascript:void();" class="active">
+                            <a href="historySumary.html" class="active">
                                 <span>
                                     <svg id="Solid" height="25" viewBox="0 0 512 512" width="25" xmlns="http://www.w3.org/2000/svg"><circle cx="216" cy="112" r="80"/><path d="m343.817 274.637c-31.117-42.497-77.107-66.637-127.817-66.637-45.522 0-87.578 19.485-118.421 54.865-31.062 35.633-48.565 85.3-49.536 140.291 18.364 9.261 93.769 44.844 167.957 44.844a312.191 312.191 0 0 0 56.6-5.387 111.947 111.947 0 0 1 71.217-167.976z"/><path d="m368 288a96 96 0 1 0 96 96 96.108 96.108 0 0 0 -96-96zm56 104h-56a8 8 0 0 1 -6.146-2.878l-40-48a8 8 0 0 1 12.292-10.244l37.601 45.122h52.253a8 8 0 0 1 0 16z"/></svg>
                                 </span>Histroy</a>
