--- a/history.html
+++ b/history.html
@@ -27,16 +27,51 @@
             <div class="col-12 customCardDiv">
                 <div class="card">
                     <div class="card-header">
-                        <h5 class="card-title text-pink">Create Ticket</h5>
+                        <h5 class="card-title text-pink">Histroy</h5>
                         </div>
                     <div class="card-body">
-                        <ul class="createTicket">
-                            <li>Ganrate Date</li>
-                            <li><a href="index2.html">1 PM</a></li>
-                            <li><a href="sixpm.html">6 PM</a></li>
-                            <li><a href="eightPM.html">8 PM</a></li>
-                            <li>Edit PRi2 List</li>
-                        </ul>
+                        <div class="table-responsive">
+                            <table class="table table-bordered table-sm">
+                                <thead>
+                                    <tr>
+                                        <th width="50">S.No.</th>
+                                        <th>Date</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>31/05/2025</td>
+                                        <td><a href="historySumary.html" class="btn btn-sm btn-primary">View</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>31/05/2025</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>31/05/2025</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>31/05/2025</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>31/05/2025</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>31/05/2025</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>31/05/2025</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
                     </div>
                 </div>
             </div>
