--- a/historySumary.html
+++ b/historySumary.html
@@ -34,7 +34,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h5 class="card-title text-pink">History</h5>
-                        <a href="create.html" class="btn btn-sm btn-primary">Back</a>
+                        <a href="history.html" class="btn btn-sm btn-primary">Back</a>
                     </div>
                     <div class="card-body">                       
                         <!-- Accrodian -->
@@ -144,7 +144,7 @@
                                     </span>Histroy</a>
                             </li>
                             <li>
-                                <a href="javascript:void();">
+                                <a href="price.html">
                                     <span> <svg id="Solid" height="25" viewBox="0 0 512 512" width="25"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="216" cy="112" r="80" />
