--- a/sellerDetails.html
+++ b/sellerDetails.html
@@ -64,6 +64,13 @@
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
 }
+
+.liFlex{
+    display: flex!important;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
     </style>
 </head>
 
@@ -96,44 +103,58 @@
                                 </div>
                             </div>
                             <ul class="onePM">
-                                <li>
-                                    
+                                <li>                                    
                                     <div class="checkBox">
                                         <input type="checkbox" id="selectAll">
                                         <label for="selectAll">All </label>
                                     </div>
                                 <span>1 PM -&gt; 3 SAM</span>
                                 <span>29-05-2024</span></li>                            
-                                <li class="d-flex">
-                                    <div class="form-group">
-                                        <input type="checkbox" id="javascript">&nbsp;                                        
+                                <li class="liFlex">
+                                    <div class="d-flex">
+                                        <div class="form-group">
+                                            <input type="checkbox" id="javascript">&nbsp;                                        
+                                        </div>
+                                        <a href="">784956321</a>
                                     </div>
-                                    <a href="">784956321</a>
+                                    <button type="submit" class="btn btn-sm btn-danger">Sell</button>
                                 </li>
-                                <li class="d-flex">
-                                    <div class="form-group">
-                                        <input type="checkbox" id="javascript">&nbsp;                                        
+                                <li class="liFlex">
+                                    <div class="d-flex">
+                                        <div class="form-group">
+                                            <input type="checkbox" id="javascript">&nbsp;                                        
+                                        </div>
+                                        <a href="">784956321</a>
                                     </div>
-                                    <a href="">784956321</a>
+                                    <button type="submit" class="btn btn-sm btn-danger">Sell</button>
                                 </li>
-                                <li class="d-flex">
-                                    <div class="form-group">
-                                        <input type="checkbox" id="javascript">&nbsp;                                        
+                                <li class="liFlex">
+                                    <div class="d-flex">
+                                        <div class="form-group">
+                                            <input type="checkbox" id="javascript">&nbsp;                                        
+                                        </div>
+                                        <a href="">784956321</a>
                                     </div>
-                                    <a href="">784956321</a>
+                                    <button type="submit" class="btn btn-sm btn-danger">Sell</button>
                                 </li>
-                                <li class="d-flex">
-                                    <div class="form-group">
-                                        <input type="checkbox" id="javascript">&nbsp;                                        
+                                <li class="liFlex">
+                                    <div class="d-flex">
+                                        <div class="form-group">
+                                            <input type="checkbox" id="javascript">&nbsp;                                        
+                                        </div>
+                                        <a href="">784956321</a>
                                     </div>
-                                    <a href="">784956321</a>
+                                    <button type="submit" class="btn btn-sm btn-danger">Sell</button>
                                 </li>
-                                <li class="d-flex">
-                                    <div class="form-group">
-                                        <input type="checkbox" id="javascript">&nbsp;                                        
+                                <li class="liFlex">
+                                    <div class="d-flex">
+                                        <div class="form-group">
+                                            <input type="checkbox" id="javascript">&nbsp;                                        
+                                        </div>
+                                        <a href="">784956321</a>
                                     </div>
-                                    <a href="">784956321</a>
-                                </li>                            
+                                    <button type="submit" class="btn btn-sm btn-danger">Sell</button>
+                                </li>                          
                             </ul>
                         </div>
                     </div>
