--- a/history.html
+++ b/history.html
@@ -31,11 +31,12 @@
                         </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-bordered table-sm">
+                            <table class="table table-bordered table-striped table-sm">
                                 <thead>
                                     <tr>
                                         <th width="50">S.No.</th>
                                         <th>Date</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -47,26 +48,32 @@
                                     <tr>
                                         <td>2</td>
                                         <td>31/05/2025</td>
+                                        <td></td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
                                         <td>31/05/2025</td>
+                                        <td></td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
                                         <td>31/05/2025</td>
+                                        <td></td>
                                     </tr>
                                     <tr>
                                         <td>5</td>
                                         <td>31/05/2025</td>
+                                        <td></td>
                                     </tr>
                                     <tr>
                                         <td>6</td>
                                         <td>31/05/2025</td>
+                                        <td></td>
                                     </tr>
                                     <tr>
                                         <td>7</td>
                                         <td>31/05/2025</td>
+                                        <td></td>
                                     </tr>
                                 </tbody>
                             </table>
