new input field

--- a/sellerDetails.html
+++ b/sellerDetails.html
@@ -100,11 +100,11 @@
                                 <ul class="dateSection">
                                     <li>
                                         <label class="form-label">Range Form:</label> 
-                                        <input type="text" class="form-control form-control-sm" width="120" />
+                                        <input type="text" class="form-control form-control-sm" />
                                     </li>
                                     <li>
                                         <label class="form-label">Range to:</label> 
-                                        <input type="text" class="form-control form-control-sm" width="120" />
+                                        <input type="text" class="form-control form-control-sm" />
                                     </li> 
                                 </ul>                              
                                 <div class="inputSearch">
