--- a/sellerDetails02.html
+++ b/sellerDetails02.html
@@ -135,9 +135,9 @@
 <body class="bodybg">
 
     <div class="container mt-5">
-        <div class="row">
+        <div class="row justify-content-center">
 
-            <div class="col-12 mb-2">
+            <div class="col-md-8 mb-2">
                 <ul class="userProfiles">
                     <li><span>Date: </span>29-05-2024 </li>
                     <li><span>User :</span></li>
@@ -146,7 +146,7 @@
                 </ul>
             </div>
 
-            <div class="col-12 customCardDiv">
+            <div class="col-md-8 customCardDiv">
                 <div class="card">
                     <div class="card-header">
                         <h5 class="card-title text-pink">Sell Details</h5>
